Fixed centre align for the landing page;

--- a/static/styles/landing.css
+++ b/static/styles/landing.css
@@ -13,7 +13,7 @@ input:focus{
     outline:none;
 }
 form{
-    margin:13%  15% 0 15%;
+    margin:13%  15% 0 13%;
     height:70%;
     width:70%;
 }
